<resources>
    <string name="app_name">AllAroundApp</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_field_empty_error">Username and password can not be empty</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="confirm_the_password">Confirm the password</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="enter_an_username">Enter an username</string>
    <string name="back_to_login">Back to login</string>
    <string name="register_field_empty_error">No field can be left empty</string>
    <string name="username_too_short_error">The username has to be at least 4 characters long</string>
    <string name="username_too_long_error">The username has to be at most 16 characters long</string>
    <string name="password_too_short_error">The password has to be at least 8 characters long</string>
    <string name="password_too_long_error">The password has to be at most 32 characters long</string>
    <string name="passwords_do_not_match">The passwords do not match</string>
    <string name="user_sent_last_message">You: %s</string>
    <string name="chat_partner_send_last_message">%s: %s</string>
    <string name="user_has_new_messages">%d new messages</string>
    <string name="enter_a_message">Type a message..</string>
    <string name="no_members_added">No members added</string>
    <string name="add_group_members">Selected group members:</string>
    <string name="enter_a_group_name">Enter a group name..</string>
    <string name="group_name">Group name:</string>
    <string name="create_a_new_group">Create a new group</string>
    <string name="create_group">Create group</string>
    <string name="recommended">Recommended:</string>
    <string name="search_for_people">Search for people</string>
    <string name="group_name_error">Group name must be between %d and %d characters</string>
    <string name="you_created_the_group">You created the group</string>
    <string name="you_were_added">You were added</string>
</resources>