<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:elevation="5dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvFragmentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_new_group"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/darkSecondaryGrey"
                android:layout_marginStart="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvGroupName"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etGroupName"
            app:layout_constraintTop_toBottomOf="@id/topBar"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/group_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etGroupName"
            android:layout_width="180dp"
            android:padding="4dp"
            android:background="@drawable/credentials_background"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvGroupName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:hint="@string/enter_a_group_name" />

        <TextView
            android:id="@+id/tvMembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etGroupName"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/add_group_members"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSelectedMembers"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvMembers" />

        <TextView
            android:id="@+id/tvNoMembers"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/rvSelectedMembers"
            app:layout_constraintBottom_toBottomOf="@id/rvSelectedMembers"
            android:text="@string/no_members_added"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etSearchPeople"
            android:layout_width="180dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvSelectedMembers"
            android:layout_marginStart="16dp"
            android:background="@drawable/credentials_background"
            android:layout_marginTop="6dp"
            android:padding="4dp"
            android:hint="@string/search_for_people"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvRecommended"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/etSearchPeople"
            android:text="@string/recommended"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            android:textSize="16sp"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchPeople"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/btnCreateGroup"
            app:layout_constraintTop_toBottomOf="@id/tvRecommended"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateGroup"
            android:text="@string/create_group"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" />

        <ProgressBar
            android:id="@+id/searchUsersProgressBar"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/rvSearchPeople"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/rvSearchPeople"
            app:layout_constraintTop_toTopOf="@+id/rvSearchPeople" />

        <TextView
            android:id="@+id/tvNoUsersFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No users found"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/rvSearchPeople"
            app:layout_constraintEnd_toEndOf="@+id/rvSearchPeople"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rvSearchPeople" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>